--- a/arch/arm64/configs/abc_defconfig
+++ b/arch/arm64/configs/abc_defconfig
@@ -6,6 +6,7 @@ CONFIG_LOCALVERSION="-Flash-Angler"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 
 # ----------------------------------------------------------------------------------
 # AOSP values
