--- a/arch/arm64/configs/abc_defconfig
+++ b/arch/arm64/configs/abc_defconfig
@@ -8,6 +8,8 @@ CONFIG_LOCALVERSION="-Flash-Angler"
 CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_WAKE_GESTURES=y
+CONFIG_SOUND_CONTROL_HAX_3_GPL=y
+
 # ----------------------------------------------------------------------------------
 # AOSP values
 # ----------------------------------------------------------------------------------
