--- a/arch/arm64/configs/abc_defconfig
+++ b/arch/arm64/configs/abc_defconfig
@@ -1,21 +1,15 @@
-###############
-#             #
-# FLASH SETUP #
-#             #
-###############
-
+# ----------------------------------------------------------------------------------
+# ABCrom kernel config
+# ----------------------------------------------------------------------------------
+CONFIG_LOCALVERSION="-ABCKernel-Angler-Oreo-1.0_upstream"
 CONFIG_LOCALVERSION="-Flash-Angler"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
 
-
-################
-#              #
-# ANGLER SETUP #
-#              #
-################
-
+# ----------------------------------------------------------------------------------
+# AOSP values
+# ----------------------------------------------------------------------------------
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
